--- a/styles.css
+++ b/styles.css
@@ -1,164 +1,198 @@
 body{
     background: #0d1321;
     background-size: auto;
-    margin: auto;
+    padding: 0;
+    margin: 0;
     font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
+    
 }
-.header{
+/* global */
+
+.container{
+    width: 80%;
+    margin:auto;
+    overflow: hidden;
+}
+ul{
+    margin: 0;
+    padding: 0;
+}
+
+/* header */
+
+header{
     background-color: #f9f4f5;
+    min-height: 70px;
 }
-.logo-brand{
-    width:50%
-}
-.logo{
-    margin: 30px;
-    padding-left: 35px;
-    width:130px;
-    height: 120px;
-}
-.brand-name{
-    font-size: 65px;
-    font-family: 'Carter One', cursive;
-    float: right;
-    padding-right: 150px;
-}
-.header h1{
-    color: red;
-}
-.header{
-    display: flex;
-}
-.navigation-bar{
-    width:50%
-}
-.header ul{
-    margin: 30px;
-    margin-top: 60px;
-    position: absolute;
-    right: 2%;
-}
-.header ul li{
+
+/* header right side */
+
+header li{
     float: left;
-    margin: 10px;
-    padding: 10px;
+    display: inline;
+    margin-left: 10px;
+    padding: 0 20px 0 20px;
     list-style: none;
     background: #0d1321;
 }
-.header ul li a{
+header a{
     text-decoration: none;
+    text-transform: uppercase;
+    font-size: 16px;    
     color: #f9f4f5;
 }
-ul li.active{
-    background: #ed1c24;
+header li.active{
+    background-color: #ed1c24;
 }
 
+/* header left side */
 
-.section1{
-    height: 665px;
-    margin: 0px;
-    background: url(photos/image1.jpg);
+header #branding{
+    float: left;
+}
+header #branding img{
+    margin:0;
+    float: left;
+    padding-bottom: 30px;
+    padding-top: 0;
+}
+header #branding h1{
+    font-size: 50px;
+    float: right;
+    margin-left: 50px;
+}
+
+header nav{
+    float: right;
+    margin-top: 50px;
+}
+
+/* showCase */
+#showcase{
+    min-height: 500px;
+    background:url("photos/showCase.jpg")no-repeat 0 -150px;
     background-size: cover;
-    background-repeat: no-repeat;
     background-position: center;
-}
-.section1-head{
     text-align: center;
-    color: #f9f4f5;
-    padding-top: 175px;
-    margin-top: 0px;
-    font-size: 80px;
-    font-family: 'Carter One', cursive;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
-
 }
-
-.section-button{
-    position: relative;
-    left: 700px;
-    width: 200px;
+#showcase h1{
+    margin-top: 150px;
+    font-size: 55px;
+    margin-bottom: 10px;
+}
+#showcase button{
+    position: relative;;
     height: 50px;
     background: crimson;
     color: white;
     border: none;
-    margin: 20px auto;
     text-align: center;
 }
 
-.section2{
-    height: 850px;
-    margin: 0px;
-    background: #8894aa;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    }
-.sect2head{
+/* About Us */
+/* maintext */
+#aboutus{
+    min-height: 500px;
     text-align: center;
-    color: #ed1c24;
-    padding-top: 10px;
-    margin-top: 0px;
-    font-size: 80px;
-    font-family: 'Carter One', cursive;
-    }
-p.aboutusmatter{
-    text-align: center;
-    padding-bottom: 20px;
-    margin: -40px;
-    font-size: 25px;
-    list-style: none;
-    color: #ed1c24;
-    width:max-content;
-    padding-left: 330px;
-    
+    background-color: #8894aa;
+    font-weight: bold;
+}
+#aboutus h2{
+    font-size: 40px;
+}
 
-}    
-.newproducthead{
-    text-align: center;
-    color: #ed1c24;
-    padding-top: 40px;
-    margin-top: 0px;
-    font-size: 50px;
-    font-family: 'Carter One', cursive;
-    text-decoration: underline
-}
-.videointro{
-    margin-left: 32%;
-    margin-top: -48px;
-}
-.footer{
-    background-color: #f9f4f5;
-    height: 200px;
 
-}
-.footer-left{
-    width: 46%;
-    height: 190px;
-    padding-left:40px;
-    padding-top: 10px;
-    float: left;
-    
-}
-#location-head{
-    color: #0d1321;
-    text-decoration-line: underline;
-}
-.footer-right{
-    float: left;
-    width: 49%;
-    height: 190px;
-    padding-left:40px;
-    padding-top: 10px;
-    margin:0;
+/* slide_showcontents */
+.mySlides {display: none;}
+img {vertical-align: middle;}
 
+/* Slideshow container */
+.slideshow-container {
+  max-width: 780px;
+  position: relative;
+  margin: auto;
 }
-#contact_details-head{
-    color: #0d1321;
-    text-decoration-line: underline;
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
 }
-#creation-box{
-    font-size: 20px;
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+footer{
+    padding: 20px;
+    margin-top: 20px;
     color: #f9f4f5;
     text-align: center;
 }
 
+/* media queries */
+
+@media(max-width:760px){
+    header #branding,
+    header nav,header nav li,
+    header #branding h1{
+        float:none;
+        text-align: center;
+        /* width:100%; */
+    }
+    header h1{
+        padding-right: 15px;
+        padding-bottom: 5px;
+    }
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 300px) {
+    .text {font-size: 11px}
+  }
+  
